[gd_scene load_steps=2 format=3 uid="uid://b8xw4qop64jn4"]

[ext_resource type="Script" uid="uid://7bybsm77k4jg" path="res://scene/components/resonance_component/resonance_component.gd" id="1_hr7cw"]

[node name="ResonanceComponent" type="Node"]
script = ExtResource("1_hr7cw")

[node name="AfkTimer" type="Timer" parent="."]
one_shot = true

[node name="LossTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="AfkTimer" to="." method="_on_afk_timer_timeout"]
[connection signal="timeout" from="LossTimer" to="." method="_on_loss_timer_timeout"]
